--- a/application/modules/admin/views/scripts/performers/view.phtml
+++ b/application/modules/admin/views/scripts/performers/view.phtml
@@ -230,6 +230,9 @@
                     <div class="col-lg-12">
                         <strong>Дата рождения:</strong> <?= $this->birthDate ?>
                     </div>
+                    <div class="col-lg-12">
+                        <strong>Описание:</strong> <?= $this->user['about'] ?>
+                    </div>
                 </div>
 
               </div>
