--- a/application/modules/customer/views/scripts/office/index.phtml
+++ b/application/modules/customer/views/scripts/office/index.phtml
@@ -133,7 +133,7 @@
         <p> Верификация телефона </p>
         <img id="verificatePhone" style="display:none" data-toggle="tooltip" data-placement="left" title="Телефон верифецирован"  width="40px" src="<?= $this->baseUrl().'/ico/phone.png' ?>" >
         <div id="verifDiv" > 
-            <?php if(!$this->user['phone_vefivied']){?>
+            <?php if(!$this->user['phone_verified']){?>
                 
                 <?php if(!$this->user['pv_id']){?>
             <a id="verificatePhoneNum">
