--- a/application/modules/admin/views/scripts/customers/view.phtml
+++ b/application/modules/admin/views/scripts/customers/view.phtml
@@ -35,6 +35,21 @@
                 Рейтинг: <?= $this->customersRating; ?>
             </div>
             <?php } ?>
+            <?php if($this->user['vk']){?>
+            <div class="col-lg-12">
+                <a href="http://vk.com/id<?= $this->user['vk'] ?>">vk.com</a>
+            </div>
+            <?php } ?>
+            <?php if($this->user['ok']){?>
+            <div class="col-lg-12">
+                <a href="http://ok.ru/profile/<?= $this->user['ok'] ?>">ok.ru</a>
+            </div>
+            <?php } ?>
+            <?php if($this->user['fb']){?>
+            <div class="col-lg-12">
+                <a href="https://www.facebook.com/<?= $this->user['fb'] ?>">ok.ru</a>
+            </div>
+            <?php } ?>
         </div>
         <div class="col-lg-12"></div>
         <div class="col-lg-12">
@@ -113,6 +128,9 @@
                     </div>
                     <div class="col-lg-12">
                         <strong>Дата рождения:</strong> <?= $this->birthDate ?>
+                    </div>
+                    <div class="col-lg-12">
+                        <strong>Описание:</strong> <?= $this->user['about']; ?>
                     </div>
                 </div>
 
