--- a/application/modules/admin/views/scripts/performers/index.phtml
+++ b/application/modules/admin/views/scripts/performers/index.phtml
@@ -31,8 +31,14 @@
                 <td><a href="<?= $this->baseUrl().'/admin/performers/view/id/'.$performer['id'] ?>"><?=  $performer['username'].' '.$performer['surname'] ?></a></td>
                 <td><?=  $performer['phonenumber'] ?></td>
                 <td><?=  $performer['city'] ?></td>
-                <td>28</td>
-                <td>balans</td>
+                <td>
+                    <?php $unixAge = time() - $performer['birth_date'];
+                    $age = $unixAge/31556926;
+                    $age = floor($age);
+                    ?>
+                    <?= $age ?>
+                </td>
+                <td><?= $performer['balance'] ?></td>
                 <td>
                      <?php if($performer['banned'] == 0){?>
                            <button id="bann<?= $performer['id'] ?>" class="btn btn-primary btn-xs"  onclick="openModal(<?= $performer['id'] ?>)">Забанить</button>
