--- a/application/modules/customer/views/scripts/layout.phtml
+++ b/application/modules/customer/views/scripts/layout.phtml
@@ -148,7 +148,32 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
  <a style="color:#fff" href="http://codepeoples.com/tanimdesign.net/thsop-v-1.3/index.html"><i class="fa fa-angle-double-left"></i> Theme Chooser </a> </h3>
 <p class="tbtn">  <i class="fa fa-angle-double-left"></i></p>
 </div>-->
-
+<?php $user = Zend_Auth::getInstance()->getIdentity();  ?>
+<!-- if phone is not verified -->
+<div class="modal signUpContent fade" id="ModalPhoneNotVerified" tabindex="-1" role="dialog" >
+  <div class="modal-dialog ">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times; </button>
+        <h3 class="modal-title-site text-center" > Не верифицирован </h3>
+      </div>
+      <div class="modal-body">
+          <p>
+              Для создания задач или для подачи заявки на статус исполнителя
+               необходимо верефицировать номер телефона.
+          </p>
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Закрыть</button>
+      </div>
+    </div>
+    <!-- /.modal-content --> 
+    
+  </div>
+  <!-- /.modal-dialog --> 
+  
+</div>
 <!-- Modal categories settings start -->
 
         <!--userForm--> 
@@ -217,7 +242,11 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-          <li class="active"> <a href="<?= $this->baseUrl().'/customer/task/new-task'?>">Создать задачу</a> </li>
+          <?php if($user->phone_verified == 1){ ?>
+            <li class="active"> <a href="<?= $this->baseUrl().'/customer/task/new-task'?>">Создать задачу</a> </li>
+          <?php }else{?>
+            <li class="active"> <a data-toggle="modal"  data-dismiss="modal" href="#ModalPhoneNotVerified">Создать задачу</a> </li>
+          <?php } ?>
           <li> <a href="<?= $this->baseUrl().'/customer/performers/'?>">Исполнители</a> </li>
 
           <?php if($this->application['customer_id'] != $this->user['id'] || $this->application == 0){?>
