--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -182,6 +182,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
   <!-- /.modal-dialog --> 
   
 </div>
+
 <!-- Modal Login start -->
 <div class="modal signUpContent fade" id="ModalLogin" tabindex="-1" role="dialog" >
   <div class="modal-dialog ">
@@ -356,6 +357,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
         <div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 no-margin no-padding">
           <div class="pull-right">
             <ul class="userMenu">
+                
               <?php if(Zend_Auth::getInstance()->hasIdentity()){?>
                 <li> <a href="account-1.html"><span class="hidden-xs">Личный кабинет</span> <i class="glyphicon glyphicon-user hide visible-xs "></i></a> </li>
                 <li> <a href="<?= $this->baseUrl().'/authentication/log-out/' ?>"  > <span class="hidden-xs">Выйти</span> <i class="glyphicon glyphicon-log-in hide visible-xs "></i> </a> </li>
@@ -392,7 +394,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-          <li class="active"> <a href="<?= $this->baseUrl()?>/tasks/index">Задачи </a> </li>
+          <li > <a href="<?= $this->baseUrl()?>/tasks/index">Задачи </a> </li>
+          <li > <a href="<?= $this->baseUrl()?>/default/performers/index">Исполнители </a> </li>
 
         <!-- change width of megamenu = use class > megamenu-fullwidth, megamenu-60width, megamenu-40width -->
         <li class="dropdown megamenu-80width "> 
@@ -536,7 +539,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
 ================================================== --> 
 
 <!-- Placed at the end of the document so the pages load faster --> 
-<script type="text/javascript" src="<?= $this->baseUrl() ?>/assets/js/jquery/1.8.3/jquery.js"></script> 
+<script type="text/javascript" src="<?= $this->baseUrl() ?>/assets/js/jquery/1.8.3/jquery.js"></script>
+<script src="//cdn.ckeditor.com/4.4.7/full/ckeditor.js"></script>
 <script src="<?= $this->baseUrl() ?>/assets/bootstrap/js/bootstrap.min.js"></script> 
 
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
@@ -548,7 +552,10 @@ function test(){
     $('#ModalLogin').modal('show');
 }
   $(function() {
-    $( "#birthday" ).datepicker();
+    $( "#birthday" ).datepicker({
+        changeMonth: true,
+      changeYear: true
+    });
   }); 
  // this script required for subscribe modal
 $(window).load(function(){
