--- a/application/modules/performer/views/scripts/layout.phtml
+++ b/application/modules/performer/views/scripts/layout.phtml
@@ -206,8 +206,11 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
     
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-          <li > <a href="<?= $this->baseUrl()?>/performer/task/add">Создать задачу</a> </li>
-          <li class="active"> <a href="<?= $this->baseUrl()?>/performer/index/tasks">Задачи </a> </li>
+          <li> <a href="<?= $this->baseUrl()?>/performer/task/add">Создать задачу</a> </li>
+          <li> <a href="<?= $this->baseUrl()?>/performer/index/tasks">Задачи </a> </li>
+          <li> <a href="<?= $this->baseUrl()?>/performer/performers/">Исполнители </a> </li>
+          <li> <a href="<?= $this->baseUrl()?>/performer/about/">О проекте</a> </li>
+          <li> <a href="<?= $this->baseUrl()?>/performer/contacts">Контакты</a> </li>
       </ul>
       <!--/.navbar-nav hidden-xs--> 
     </div>
