--- a/application/modules/customer/views/scripts/pagination.phtml
+++ b/application/modules/customer/views/scripts/pagination.phtml
@@ -22,7 +22,7 @@
 //if(isset($this->next)){
 //    echo ' <li><a href="'.$this->url(array('page' => $this->last)).'" class="last-page" >Конец</a></li>';
 //}else{
-//   // echo '<li><a href="#" class="last-page" >Конец</a></li>';
+//    echo '<li><a href="#" class="last-page" >Конец</a></li>';
 //}
  ?>
 
