--- a/application/modules/default/views/scripts/layout.phtml
+++ b/application/modules/default/views/scripts/layout.phtml
@@ -434,57 +434,31 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
   <div class="footer" id="footer">
     <div class="container">
       <div class="row">
-        <div class="col-lg-3  col-md-3 col-sm-4 col-xs-6">
-          <h3> Support </h3>
+        <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
+          <h3> Поддержка </h3>
           <ul>
             <li class="supportLi">
-              <p> Lorem ipsum dolor sit amet, consectetur </p>
-              <h4> <a class="inline" href="callto:+8801680531352"> <strong> <i class="fa fa-phone"> </i> 88 01680 531352 </strong> </a> </h4>
-              <h4> <a class="inline" href="mailto:help@tshopweb.com"> <i class="fa fa-envelope-o"> </i> help@tshopweb.com </a> </h4>
+              <p> При любом вопросе свяжитесь с нами </p>
+              <h4> <a class="inline" > <strong> <i class="fa fa-phone"> </i> 88 01680 531352 </strong> </a> </h4>
+              <h4> <a class="inline" href="mailto:help@icando.by"> <i class="fa fa-envelope-o"> </i> help@icando.by</a> </h4>
             </li>
           </ul>
         </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Shop </h3>
+        
+        <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
+          <h3> Меню </h3>
           <ul>
-            <li> <a href="index.html"> Home </a> </li>
-            <li> <a href="category.html"> Category </a> </li>
-            <li> <a href="sub-category.html"> Sub Category </a> </li>
+              <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> Кабинет </a> </li>
+            <li> <a href="#"  data-toggle="modal" data-target="#ModalLogin"> Создать задачу </a> </li>
+            <li> <a href="<?= $this->baseUrl().'/performers/' ?>"> Исполнители </a> </li>
+            <li> <a href="<?= $this->baseUrl().'/about/' ?>"> О проекте</a> </li>
+            <li> <a href="<?= $this->baseUrl().'/contacts/' ?>"> Контакты </a> </li>
           </ul>
         </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> Information </h3>
-          <ul>
-            <li> <a href="product-details.html"> Product Details </a> </li>
-            <li> <a href="product-details-style2.html"> Product Details Version 2 </a> </li>
-            <li> <a href="cart.html"> Cart </a> </li>
-            <li> <a href="about-us.html"> About us </a> </li>
-            <li> <a href="about-us-2.html"> About us 2 </a> </li>
-            <li> <a href="contact-us.html"> Contact us </a> </li>
-            <li> <a href="contact-us-2.html"> Contact us 2 </a> </li>
-            <li> <a href="terms-conditions.html"> Terms &amp; Conditions </a> </li>
-          </ul>
-        </div>
-        <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-          <h3> My Account </h3>
-          <ul>
-            <li> <a href="account-1.html"> Account Login </a> </li>
-            <li> <a href="account.html"> My Account </a> </li>
-            <li> <a href="my-address.html"> My Address </a> </li>
-            <li> <a href="wishlist.html"> Wisth list </a> </li>
-            <li> <a href="order-list.html"> Order list </a> </li>
-          </ul>
-        </div>
-        <div class="col-lg-3  col-md-3 col-sm-6 col-xs-12 ">
-          <h3> Stay in touch </h3>
-          <ul>
-            <li>
-              <div class="input-append newsLatterBox text-center">
-                <input type="text" class="full text-center"  placeholder="Email ">
-                <button class="btn  bg-gray" type="button"> Subscribe <i class="fa fa-long-arrow-right"> </i> </button>
-              </div>
-            </li>
-          </ul>
+
+        <div class="col-lg-4  col-md-12 col-sm-12 col-xs-12">
+          <h3> Мы в социальных сетях</h3>
+          
           <ul class="social">
             <li> <a href="http://facebook.com/"> <i class=" fa fa-facebook"> &nbsp; </i> </a> </li>
             <li> <a href="http://twitter.com/"> <i class="fa fa-twitter"> &nbsp; </i> </a> </li>
@@ -493,6 +467,7 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
             <li> <a href="http://youtube.com/"> <i class="fa fa-youtube"> &nbsp; </i> </a> </li>
           </ul>
         </div>
+          
       </div>
       <!--/.row--> 
     </div>
@@ -502,8 +477,8 @@ document.getElementById('pagestyle').setAttribute('href', sheet);
   
   <div class="footer-bottom">
     <div class="container">
-      <p class="pull-left"> &copy; TSHOP 2014. All right reserved. </p>
-      <div class="pull-right paymentMethodImg"> <img height="30" class="pull-right" src="<?= $this->baseUrl() ?>/images/site/payment/master_card.png" alt="img" > <img height="30" class="pull-right" src="<?= $this->baseUrl() ?>/images/site/payment/paypal.png" alt="img" > <img height="30" class="pull-right" src="<?= $this->baseUrl() ?>/images/site/payment/american_express_card.png" alt="img" > <img  height="30" class="pull-right" src="<?= $this->baseUrl() ?>/images/site/payment/discover_network_card.png" alt="img" > <img  height="30" class="pull-right" src="<?= $this->baseUrl() ?>/images/site/payment/google_wallet.png" alt="img" > </div>
+      <p class="pull-left"> &copy; ICANDO.BY 2014. All right reserved. </p>
+      <div class="pull-right paymentMethodImg"> </div>
     </div>
   </div>
   <!--/.footer-bottom--> 
